--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,17 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+  </app-root>
+  <app-description text="'HOLA!'"></app-description>
+ 
+  <app-header title="Title"
+      subtitle="Subtitle"
+      description="DESCRIPTION"
+  ></app-header>
+
+
+  
+  
 </body>
 </html>
